--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Tailoring Tool"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=tailoring_tool
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -44,3 +44,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DEFAULT_CURRENCY=XAF
+
+MIN_USER_BAN_DAYS=30
+
+MEASUREMENT_UNIT=cm
