--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laraveldaily/laravel-invoices": "^1.3",
+        "santigarcor/laratrust": "^6.1",
+        "spatie/laravel-activitylog": "^3.14"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -34,6 +37,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Support/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
